# bots

./: .gitignore  CMakeLists.txt  build.sh  start.sh  start_ps.sh
hashImage/: refMantisPos1.hash  refMantisPos10.hash  refMantisPos11.hash  refMantisPos12.hash  refMantisPos13.hash  refMantisPos2.hash  refMantisPos3.hash  refMantisPos4.hash  refMantisPos5.hash  refMantisPos6.hash  refMantisPos7.hash  refMantisPos8.hash  refMantisPos9.hash
include/: bot.h  common.h  scrinMonitor.h  type.h  workingImages.h
src/: bot.cpp  common.cpp  main.cpp  scrinMonitor.cpp  workingImages.cpp
telegramBot/: CMakeLists.txt  build.sh  main.cpp  sample_config.json  start.sh
